# egon_simbev_data_model

./: .bumpversion.cfg  .coveragerc  .gitignore  .pylintrc  CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml  documentation.yml  release.yml
docs/source/: conf.py  egon_simbev_data_model.config.rst  egon_simbev_data_model.rst  index.rst  installation.rst  modules.rst  tests.rst  usage.rst
egon_simbev_data_model/: __init__.py  egon_simbev_data_model.py
egon_simbev_data_model/config/: config.py  settings.toml
tests/: test_egon_simbev_data_model.py
