[tool.poetry]
name = "egon_simbev_data_model"
version = "0.1.0"
description = "eGo^n data modell for ev electromobility using simbev"
license = "MIT"
authors = ["Kilian Helfenbein <kilian.helfenbein@rl-institut.de>"]
readme = "README.rst"
homepage = "https://github.com/khelfen/egon-simbev-data-model"
repository = "https://github.com/khelfen/egon-simbev-data-model"
documentation = "https://khelfen.github.io/egon-simbev-data-model/"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
include = [
    "docs",
    "tests",
    "*.rst",
    "LICENSE",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/khelfen/egon-simbev-data-model/issues"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.3.5"
loguru = "^0.5.3"
numpy = "^1.21.4"
dynaconf = "^3.1.7"

[tool.poetry.dev-dependencies]
actions-toolkit = "^0.0.5"
black = "^21.5b0"
bump2version = "^1.0.1"
codecov = "^2.1.11"
coverage = "^5.5"
dunamai = "^1.5.5"
flake8 = "^3.9.1"
isort = "^5.8.0"
mypy = "^0.812"
pip-tools = "^6.1.0"
pre-commit = "^2.12.1"
pylint = "^2.8.2"
pytest = "^6.2.4"
pytest-cov = "^2.11.1"
pytest-xdist = "^2.2.1"
Sphinx = "^3.5.4"
sphinx-autoapi = "^1.8.1"

[tool.poetry.scripts]
egon_simbev_data_model = "egon_simbev_data_model.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
